--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,9 +60,12 @@
      <Compile Include="Assets\1.Script\Display\SaveObject.cs" />
      <Compile Include="Assets\1.Script\Display\TileManager.cs" />
      <Compile Include="Assets\1.Script\Display\TileObject.cs" />
+     <Compile Include="Assets\1.Script\Player\ResourceManager_Player.cs" />
      <Compile Include="Assets\1.Script\Room\Map\MapManager.cs" />
      <Compile Include="Assets\1.Script\Room\Map\MapRoom.cs" />
      <Compile Include="Assets\1.Script\Room\RoomManager.cs" />
+     <Compile Include="Assets\1.Script\Secrets\SecretActs.cs" />
+     <Compile Include="Assets\1.Script\Secrets\SecretManager.cs" />
      <Compile Include="Assets\1.Script\Select\BoxManager.cs" />
      <Compile Include="Assets\1.Script\Select\SlotArray.cs" />
      <Compile Include="Assets\1.Script\Select\SlotInfo.cs" />
