hit wall processing. . . There's a lot of bugs here. But Can Hit the Wall now.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -97,6 +97,8 @@
      <Compile Include="Assets\1.Script\Trap\Trap.cs" />
      <Compile Include="Assets\1.Script\Trap\Warp_Enter.cs" />
      <Compile Include="Assets\1.Script\Trap\Warp_Exit.cs" />
+     <Compile Include="Assets\1.Script\Wall\OldBuilding.cs" />
+     <Compile Include="Assets\1.Script\Wall\Wall.cs" />
      <Compile Include="Assets\1.Script\_Jang\CameraMove.cs" />
      <Compile Include="Assets\1.Script\_Jang\CubeObject.cs" />
      <Compile Include="Assets\1.Script\_Jang\DoorObject.cs" />
