--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -123,6 +123,8 @@
      <Compile Include="Assets\1.Script\1.UI\_Jang\Enemy\ActiveEnemyManager.cs" />
      <Compile Include="Assets\1.Script\1.UI\_Jang\Enemy\Enemy.cs" />
      <Compile Include="Assets\1.Script\1.UI\_Jang\Enemy\EnemyBody.cs" />
+     <Compile Include="Assets\1.Script\1.UI\_Jang\Enemy\EnemyCluster.cs" />
+     <Compile Include="Assets\1.Script\1.UI\_Jang\Enemy\EnemyClusterManager.cs" />
      <Compile Include="Assets\1.Script\1.UI\_Jang\Enemy\EnemyFlyTeen.cs" />
      <Compile Include="Assets\1.Script\1.UI\_Jang\Enemy\EnemyGroup.cs" />
      <Compile Include="Assets\1.Script\1.UI\_Jang\Enemy\EnemyMafia.cs" />
