--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -143,6 +143,7 @@
      <Compile Include="Assets\1.Script\1.UI\_Jang\ParticleObject.cs" />
      <Compile Include="Assets\1.Script\1.UI\_Jang\PoolManager.cs" />
      <Compile Include="Assets\1.Script\1.UI\_Jang\UIManager.cs" />
+     <Compile Include="Assets\1.Script\PathTest.cs" />
      <Compile Include="Assets\1.Script\SoundManager.cs" />
      <Compile Include="Assets\1.Script\TestScript.cs" />
      <Compile Include="Assets\JMO Assets\Shape FX\Demo\Atlas Assets\ShFX_Atlas.cs" />
