Character Dialogue Processing
 - Bug Report: Says the same script when enters another room
 - Need to fix enemyaction => to wait at the exit point
  - How to do? => Need nextExit when there's no obstacle in the path

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -125,6 +125,7 @@
      <Compile Include="Assets\1.Script\1.UI\_Jang\Enemy\EnemyBody.cs" />
      <Compile Include="Assets\1.Script\1.UI\_Jang\Enemy\EnemyCluster.cs" />
      <Compile Include="Assets\1.Script\1.UI\_Jang\Enemy\EnemyClusterManager.cs" />
+     <Compile Include="Assets\1.Script\1.UI\_Jang\Enemy\EnemyDialogue.cs" />
      <Compile Include="Assets\1.Script\1.UI\_Jang\Enemy\EnemyFlyTeen.cs" />
      <Compile Include="Assets\1.Script\1.UI\_Jang\Enemy\EnemyGroup.cs" />
      <Compile Include="Assets\1.Script\1.UI\_Jang\Enemy\EnemyIDEFarmer.cs" />
